--- a/assets/style.css
+++ b/assets/style.css
@@ -218,14 +218,23 @@ body {
   
   /*media quieires*/
   
-  @-ms-viewport{
-    [viewport property];
-  }
-  
-  @-ms-viewport{
-    width: device-width;
-  }
-  
-  @-ms-viewport{
-    width: device-width;
-  }
+ /* iPhone */
+ @media only screen 
+ and (max-device-width: 768px) 
+ and (-webkit-min-device-pixel-ratio: 3)
+ and (orientation: landscape) { 
+
+}
+
+/* Tablet */
+@media only screen 
+  and (min-device-width: 768px) 
+  and (orientation: landscape) 
+  and (-webkit-min-device-pixel-ratio: 2) {
+
+}
+/* Desktop */
+@media screen 
+  and (max-device-width: 968px) 
+  and (-webkit-min-device-pixel-ratio: 1) { 
+}
