--- a/assets/style.css
+++ b/assets/style.css
@@ -233,8 +233,8 @@ body {
   and (-webkit-min-device-pixel-ratio: 2) {
 
 }
-/* Desktop */
+
 @media screen 
-  and (max-device-width: 968px) 
+  and (min-device-width: 960px) 
   and (-webkit-min-device-pixel-ratio: 1) { 
 }
