--- a/assets/style.css
+++ b/assets/style.css
@@ -224,29 +224,22 @@ body {
       max-width:640px;
     }
 
-    nav {
-      margin-right:20%;
-    }
-      .wrapper {
-        /* Box-model */
-        width: 100%;
-        padding: 20px;
-      }
-      #contact-form {
-      width: 100%;
-  }
+#logo {
+  margin-left:30%;
+}
 
-  
+nav {
+      margin-right:20%;  
+    }
 
 /* Tablet */
-@media screen 
-  and (max-width: 768px) 
-  and (orientation: landscape) 
-  and (-webkit-min-device-pixel-ratio: 2) {
-
+@media screen and (max-width: 768px) {
+} .body {
+  max-width:768px;
 }
+
 /*Desktop*/
-@media screen 
-  and (max-width: 960px) 
-  and (-webkit-min-device-pixel-ratio: 1) { 
+@media screen and (max-width: 960px) {
+} .body{
+  max-width:960px;
 }
