--- a/assets/style.css
+++ b/assets/style.css
@@ -222,15 +222,22 @@ body {
  @media screen and (max-width:640px) {
     .body {
       max-width:640px;
+      padding:30px;
     }
-
 #logo {
   text-align: center;
   width:100%;
 }
-
+.h1 {
+  margin-top:20px;
+  padding-top:10px;
+}
 nav {
-      margin-right:20%;  
+margin-right:20%;  
+padding:10px;
+    }
+.auth-image {
+width:360px;
     }
 
 /* Tablet */
